@@ -1,5 +1,6 @@
 // { dg-do assemble { target fpic } }
 // { dg-options "-O0 -fpic" }
+// { dg-skip-if "requires unsupported run-time relocation" { spu-*-* } { "*" } { "" } }
 // Origin: Jakub Jelinek <jakub@redhat.com>
 
 struct bar {
